Add 'What's New' article

--- a/home.html
+++ b/home.html
@@ -28,8 +28,59 @@
 			</nav>
 		</header>
 		<main role="main">
-
-		
+			<article>
+				<header>
+					<h2>What's New</h2>
+					<img src="HTML5.png" alt="HTML5 logo" width="50px">
+					<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
+				</header>
+				<section>
+					<h3>Improved Element Semantics</h3>
+					<h4>Description</h4>
+					<p>
+						HTML5 provides better-defined semantic roles for existing elements 
+						and adds new elements with useful semantics. Therefore the use of
+						&ltdiv&gt elements is kept at minimum, making the page a bit more 
+						semantic, but more importantly, easier to read.
+					</p>
+				</section>
+				<section>
+					<h3>Web Application Features</h3>
+					<h4>Description</h4>
+					<p>
+						Features that previously were only availbale through JS have been 
+						added directly to HTML5, such as &ltcanvas&gt, &ltvideo&gt, and 
+						&ltaudio&gt. Local storage and new input types for which the browser 
+						can expose easy user interfaces (no JS code required) have also been
+						added. HTML5 also allows JS and browser interface to run in separate 
+						threads. Furthermore unlike its predecessor, HTML5 made it extremely
+						easy to get the user's location. These and other features made the 
+						process of developing web applications simpler and faster.     
+					</p>
+				</section>	
+				<section>
+					<h3>Consistency in Handling Malformed Documents</h3>
+					<h4>Description</h4>
+					<p>
+						HTML supports "tag soup"(i.e. &ltp&gtThis is a malformed fragment of
+						&ltem&gtHTML.&lt/p&gt&lt/em&gt) or the ability to write malformed 
+						code that is syntactically or structurally incorrect. Prior to 
+						HTML5, there was no standard way to correct malformed code in order 
+						to be displayed correclty in the browser. Before, new browser 
+						developers had to test malformed documents in various browsers and 
+						reverse engineer their error-handling. Fortunately, HTML5 
+						acknowledges that badly formed HTML code already exists in large 
+						quantities and will probably continue to be used and describes 
+						exactly how "badly formed code" should be treated. In other words,
+						the handling of badly formed code now has a place in the 
+						specification itself.
+					</p>
+				</section>
+				<p>
+					source:http://stackoverflow.com/questions/134727/whats-the-key-difference-between-html-4-and-html-5<br>
+					https://en.wikipedia.org/wiki/Tag_soup
+				</p>
+			</article>
 		</main>
 		<footer>
   		<address>
