--- a/new-input-types.html
+++ b/new-input-types.html
@@ -27,360 +27,362 @@
 	    	</ul>
 			</nav>
 		</header>
-		<article>
-			<header>
-				<h2>New Input Types</h2>
-				<img src="HTML5.png" alt="HTML5 logo" width="50px">
-			  <p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
-			</header>
-			<section>
-				<p>
-					<i class="notice">Notice 1:</i> If a browser doesn't support a 
-					particular input type, it defaults to "text".
-				</p>
-				<p>
-					<i class="notice">Notice 2:</i> The &ltform&gt tag is used to create 
-					an HTML form for user input.
-				</p>
-			</section>
-			<section>
-				<h3>Search</h3>
-				<h4>Description</h4>
-				<p>
-					&ltinput type="search"&gt is a one-line plain-text for entering one or 
-					more search terms.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+		<main role="main">
+			<article>
+				<header>
+					<h2>New Input Types</h2>
+					<img src="HTML5.png" alt="HTML5 logo" width="50px">
+				  <p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
+				</header>
+				<section>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspSearch Google:<br>
-						&nbsp&nbsp&ltinput type="search" name="google-search"&gt<br>
-						&lt/form&gt<br>
+						<i class="notice">Notice 1:</i> If a browser doesn't support a 
+						particular input type, it defaults to "text".
 					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Search Google:
-						<input type="search" name="google-search">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Email</h3>
-				<h4>Description</h4>
-				<p>
-					&ltinput type="email"&gt is a regular text input, but with added 
-					usability on mobile devices(i.e keyboard with email-related keys).
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspE-mail:<br>
-						&nbsp&nbsp&ltinput type="email" name="email"&gt<br>
-						&lt/form&gt<br>
+						<i class="notice">Notice 2:</i> The &ltform&gt tag is used to create 
+						an HTML form for user input.
 					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">		
-					<form>
-						E-mail:
-						<input type="email" name="email">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>URL</h3>
-				<h4>Description</h4>
-				<p>
-					&ltinput type="url"&gt is a regular text input, but with added 
-					usability on mobile devices(i.e. keyboard with URL-related keys).
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+				</section>
+				<section>
+					<h3>Search</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspAdd your homepage:<br>
-						&nbsp&nbsp&ltinput type="url" name="homepage"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Add your homepage:
-						<input type="url" name="homepage">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Tel</h3>
-				<h4>Description</h4> 
-				<p>
-					&ltinput type="tel"&gt is regular text input, but with added usability
-					on mobile devices(keyboard with digits).
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						&ltinput type="search"&gt is a one-line plain-text for entering one or 
+						more search terms.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspSearch Google:<br>
+							&nbsp&nbsp&ltinput type="search" name="google-search"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Search Google:
+							<input type="search" name="google-search">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Email</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspTelephone:<br>
-						&nbsp&nbsp&ltinput type="tel" name="usrtel"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Telephone:
-						<input type="tel" name="usrtel">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Number</h3>
-				<h4>Description</h4>
-				<p>
-					&ltinput type="number"&gt represents a precise control for setting the 
-					element's value to a string representing a number. In the browser we 
-					get a convinient control to the right side of the input that allows us 
-					to increase or decrease the value. The keyboard on mobile devices 
-					changes to have a row of number keys at the top.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						&ltinput type="email"&gt is a regular text input, but with added 
+						usability on mobile devices(i.e keyboard with email-related keys).
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspE-mail:<br>
+							&nbsp&nbsp&ltinput type="email" name="email"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">		
+						<form>
+							E-mail:
+							<input type="email" name="email">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>URL</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspEnter a number (between 1 and 5):<br>
-						&nbsp&nbsp&ltinput type="number" name="number" min="1" 
-						max="5"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Enter a number (between 1 and 5):
-						<input type="number" name="number" min="1" max="5">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Range</h3>
-				<h4>Description</h4>
-				<p>
-					&ltinput type="range"&gt defines an imprecise control for setting the 
-					element's value to a string representing a number. In the browser we 
-					get a control that allows us to drag a slider to change the number 
-					value.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						&ltinput type="url"&gt is a regular text input, but with added 
+						usability on mobile devices(i.e. keyboard with URL-related keys).
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspAdd your homepage:<br>
+							&nbsp&nbsp&ltinput type="url" name="homepage"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Add your homepage:
+							<input type="url" name="homepage">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Tel</h3>
+					<h4>Description</h4> 
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbsp&ltp&gtRange (0-50):&lt/p&gt<br>
-						&nbsp&nbsp&ltinput type="range" name="points" min="0" 
-						max="50"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Range (0-50):
-						<input type="range" name="points" min="0" max="50">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Month</h3>
-				<h4>Description</h4>
-				<p>
-					&ltinput type="month"&gt allows the user to select a month and year. A 
-					date picker can show up in the input field.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						&ltinput type="tel"&gt is regular text input, but with added usability
+						on mobile devices(keyboard with digits).
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspTelephone:<br>
+							&nbsp&nbsp&ltinput type="tel" name="usrtel"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Telephone:
+							<input type="tel" name="usrtel">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Number</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspSelect a month:<br>
-						&nbsp&nbsp&ltinput type="month" name="month-year"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Select a month:
-						<input type="month" name="month-year">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Week</h3>
-				<h4>Description</h4>
-				<p>
-					&ltinput type="week"&gt allows the user to select a week and year. A 
-					date picker can show up in the input field.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						&ltinput type="number"&gt represents a precise control for setting the 
+						element's value to a string representing a number. In the browser we 
+						get a convinient control to the right side of the input that allows us 
+						to increase or decrease the value. The keyboard on mobile devices 
+						changes to have a row of number keys at the top.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspEnter a number (between 1 and 5):<br>
+							&nbsp&nbsp&ltinput type="number" name="number" min="1" 
+							max="5"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Enter a number (between 1 and 5):
+							<input type="number" name="number" min="1" max="5">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Range</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspSelect a week:<br>
-						&nbsp&nbsp&ltinput type="week" name="week-year"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Select a week:
-						<input type="week" name="week-year">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Date</h3>
-				<h4>Description</h4>
-				<p>
-					&ltinput type="date"&gt is used for input fields that should contain a 
-					date. A date picker can show up in the input field.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						&ltinput type="range"&gt defines an imprecise control for setting the 
+						element's value to a string representing a number. In the browser we 
+						get a control that allows us to drag a slider to change the number 
+						value.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbsp&ltp&gtRange (0-50):&lt/p&gt<br>
+							&nbsp&nbsp&ltinput type="range" name="points" min="0" 
+							max="50"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Range (0-50):
+							<input type="range" name="points" min="0" max="50">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Month</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspBirthday:<br>
-						&nbsp&nbsp&ltinput type="date" name="birthday"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Birthday:
-						<input type="date" name="birthday">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Datetime-local</h3>
-				<h4>Description</h4>
-				<p>
-					The &ltinput type="datetime-local"&gt specifies a date and time input 
-					field, with no time zone. A date picker can show up in the input 
-					field.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						&ltinput type="month"&gt allows the user to select a month and year. A 
+						date picker can show up in the input field.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspSelect a month:<br>
+							&nbsp&nbsp&ltinput type="month" name="month-year"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Select a month:
+							<input type="month" name="month-year">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Week</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspExam (date and time):<br>
-						&nbsp&nbsp&ltinput type="datetime-local" name="exam-time"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Exam (date and time):
-						<input type="datetime-local" name="exam-time">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Datetime</h3>
-				<h4>Description</h4>
-				<p>
-					The &ltinput type="datetime"&gt specifies a date and time input field, 
-					with time zone. A date picker can show up in the input field.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						&ltinput type="week"&gt allows the user to select a week and year. A 
+						date picker can show up in the input field.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspSelect a week:<br>
+							&nbsp&nbsp&ltinput type="week" name="week-year"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Select a week:
+							<input type="week" name="week-year">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Date</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspExam (date and time):<br>
-						&nbsp&nbsp&ltinput type="datetime" name="exam-time"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Exam (date and time):
-						<input type="datetime" name="exam-time">
-					</form>
-				</div>
-				<p>
-					<i class="notice">Notice:</i> As of Feb 23, 2017, "datetime" is not 
-					supported.
-				</p>
-			</section>
-			<section>
-				<h3>Time</h3>
-				<h4>Description</h4>
-				<p>
-					The &ltinput type="time"&gt allows the user to select a 
-					time(no timezone). A time picker can show up in the input field.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						&ltinput type="date"&gt is used for input fields that should contain a 
+						date. A date picker can show up in the input field.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspBirthday:<br>
+							&nbsp&nbsp&ltinput type="date" name="birthday"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Birthday:
+							<input type="date" name="birthday">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Datetime-local</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspSelect a time:<br>
-						&nbsp&nbsp&ltinput type="time" name="usrtime"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Select a time:
-						<input type="time" name="usrtime">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Color</h3>
-				<h4>Description</h4>
-				<p>
-					The &ltinput type="color"&gt is used for input fields that should 
-					contain a color. A color picker can show up in the input field.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						The &ltinput type="datetime-local"&gt specifies a date and time input 
+						field, with no time zone. A date picker can show up in the input 
+						field.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspExam (date and time):<br>
+							&nbsp&nbsp&ltinput type="datetime-local" name="exam-time"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Exam (date and time):
+							<input type="datetime-local" name="exam-time">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Datetime</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspPick a color:<br>
-						&nbsp&nbsp&ltinput type="color" name="usrcolor"&gt<br>
-						&lt/form&gt<br>
+						The &ltinput type="datetime"&gt specifies a date and time input field, 
+						with time zone. A date picker can show up in the input field.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspExam (date and time):<br>
+							&nbsp&nbsp&ltinput type="datetime" name="exam-time"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Exam (date and time):
+							<input type="datetime" name="exam-time">
+						</form>
+					</div>
+					<p>
+						<i class="notice">Notice:</i> As of Feb 23, 2017, "datetime" is not 
+						supported.
 					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Pick a color:
-						<input type="color" name="usrcolor">
-					</form>
-				</div>
-			</section>
-		</article>
+				</section>
+				<section>
+					<h3>Time</h3>
+					<h4>Description</h4>
+					<p>
+						The &ltinput type="time"&gt allows the user to select a 
+						time(no timezone). A time picker can show up in the input field.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspSelect a time:<br>
+							&nbsp&nbsp&ltinput type="time" name="usrtime"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Select a time:
+							<input type="time" name="usrtime">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Color</h3>
+					<h4>Description</h4>
+					<p>
+						The &ltinput type="color"&gt is used for input fields that should 
+						contain a color. A color picker can show up in the input field.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspPick a color:<br>
+							&nbsp&nbsp&ltinput type="color" name="usrcolor"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Pick a color:
+							<input type="color" name="usrcolor">
+						</form>
+					</div>
+				</section>
+			</article>
+		</main>
 		<footer>
   		<address>
     		&copy 2017 <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
