--- a/updated-tags.html
+++ b/updated-tags.html
@@ -27,92 +27,94 @@
 	    	</ul>
 			</nav>
 		</header>
-		<article>
-			<header>
-				<h2>Updated Tags</h2>
-				<img src="HTML5.png" alt="HTML5 logo" width="50px">
-				<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
-			</header>
-			<section>
-				<h3>"i" tag</h3>
-				<h4>Description</h4>
-				<p>
-					Represents text in an "alternate voice", mood, foreign words, 
-					technical terms or fictional character thoughts. It is a good idea to 
-					use the "class" attribute to make "i" more semantic.
-				</p>
-				<h4>Examples</h4>
-				<div class="code">
-					<ul>
-						<li><i class="thought">I hope this works</i>, he thought.</li>
-						<li>
-							We ate different types of sushi last night such as 
-							<i class="sushi-type">Nigiri</i>, 
-							<i class="sushi-type">Sashimi</i> and 
-							<i class="sushi-type">Maki</i>.
-						</li>
-						<li>
-							There are four variations of the <i class="brevity code">Fox</i> 
-							brevity word, <i class="brevity word">Fox One</i> is one of them 
-							and indicates a simulated or actual launch of a semi-active 
-							radar-guided missile.
-						</li>
-					</ul>
-				</div>
-			</section>
-			<section>
-				<h3>"b" tag</h3>
-				<h4>Description</h4>
-				<p>
-					Represents "stylistically offset" text such as keywords and text that 
-					is bold by typographic convention(and not because is important). Also,
-					the "b" tag can be used when you want to draw attention without 
-					increasing importance. It is a good practice to use the "class" 
-					attribute on the "b" tag in order to convey additional semantic 
-					information(i.e. &ltb class="lead"&gt for the first sentence in a 
-					paragraph). The "b" tag doesn't convey semantic information; use it 
-					only when no others fit.Do not mark titles and headings using the "b" 
-					tag.
-				</p>
-				<h4>Examples</h4>
-				<div class="code">
-					<ul>
-						<li>
-							<b class="lead">The event takes place this upcoming Saturday, and 
-							over 3,000 people have already registered.</b>
-						</li>
-					</ul>
-				</div>
-			</section>
-			<section>
-				<h3>"em" tag</h3>
-				<h4>Description</h4>
-				<p>
-					Stress emphasis. If spoken, this stress would be emphasised 
-					pronunciation on a word.
-				</p>
-				<h4>Examples</h4>
-				<div class="code">
-					<ul>
-						<li>Call a doctor <em>now!</em></li>
-						<li>I <em>love</em> swimming</li>
-					</ul>
-				</div>
-			</section>
-			<section>
-				<h3>"strong" tag</h3>
-				<h4>Description</h4> 
-				<p>Strong importance.</p>
-				<h4>Examples</h4>
-				<div class="code">
-					<ul>
-						<li>
-							<strong>Warning!</strong> This is <strong>very dangerous</strong>.
-						</li>
-					</ul>
-				</div>
-			</section>
-		</article>
+		<main role="main">
+			<article>
+				<header>
+					<h2>Updated Tags</h2>
+					<img src="HTML5.png" alt="HTML5 logo" width="50px">
+					<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
+				</header>
+				<section>
+					<h3>"i" tag</h3>
+					<h4>Description</h4>
+					<p>
+						Represents text in an "alternate voice", mood, foreign words, 
+						technical terms or fictional character thoughts. It is a good idea to 
+						use the "class" attribute to make "i" more semantic.
+					</p>
+					<h4>Examples</h4>
+					<div class="code">
+						<ul>
+							<li><i class="thought">I hope this works</i>, he thought.</li>
+							<li>
+								We ate different types of sushi last night such as 
+								<i class="sushi-type">Nigiri</i>, 
+								<i class="sushi-type">Sashimi</i> and 
+								<i class="sushi-type">Maki</i>.
+							</li>
+							<li>
+								There are four variations of the <i class="brevity code">Fox</i> 
+								brevity word, <i class="brevity word">Fox One</i> is one of them 
+								and indicates a simulated or actual launch of a semi-active 
+								radar-guided missile.
+							</li>
+						</ul>
+					</div>
+				</section>
+				<section>
+					<h3>"b" tag</h3>
+					<h4>Description</h4>
+					<p>
+						Represents "stylistically offset" text such as keywords and text that 
+						is bold by typographic convention(and not because is important). Also,
+						the "b" tag can be used when you want to draw attention without 
+						increasing importance. It is a good practice to use the "class" 
+						attribute on the "b" tag in order to convey additional semantic 
+						information(i.e. &ltb class="lead"&gt for the first sentence in a 
+						paragraph). The "b" tag doesn't convey semantic information; use it 
+						only when no others fit.Do not mark titles and headings using the "b" 
+						tag.
+					</p>
+					<h4>Examples</h4>
+					<div class="code">
+						<ul>
+							<li>
+								<b class="lead">The event takes place this upcoming Saturday, and 
+								over 3,000 people have already registered.</b>
+							</li>
+						</ul>
+					</div>
+				</section>
+				<section>
+					<h3>"em" tag</h3>
+					<h4>Description</h4>
+					<p>
+						Stress emphasis. If spoken, this stress would be emphasised 
+						pronunciation on a word.
+					</p>
+					<h4>Examples</h4>
+					<div class="code">
+						<ul>
+							<li>Call a doctor <em>now!</em></li>
+							<li>I <em>love</em> swimming</li>
+						</ul>
+					</div>
+				</section>
+				<section>
+					<h3>"strong" tag</h3>
+					<h4>Description</h4> 
+					<p>Strong importance.</p>
+					<h4>Examples</h4>
+					<div class="code">
+						<ul>
+							<li>
+								<strong>Warning!</strong> This is <strong>very dangerous</strong>.
+							</li>
+						</ul>
+					</div>
+				</section>
+			</article>
+		</main>
 		<footer>
   		<address>
     		&copy 2017 <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
