--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -27,127 +27,129 @@
 	    	</ul>
 			</nav>
 		</header>
-		<article>
-			<header>
-				<h2>New Input Attributes</h2>
-				<img src="HTML5.png" alt="HTML5 logo" width="50px">
-				<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
-			</header>
-			<section>
-				<h4>HTML5 added the following attributes for the &ltinput&gt element:</h4>
-				<ul>
-					<li>autocomplete</li>
-					<li><b class="covered">autofocus</b></li>
-					<li>form</li>
-					<li>formaction</li>
-					<li>formenctype</li>
-					<li>formmethod</li>
-					<li>formnovalidate</li>
-					<li>formtarget</li>
-					<li>height</li>
-					<li>width</li>
-					<li>list</li>
-					<li>min</li>
-					<li>max</li>
-					<li>multiple</li>
-					<li><b class="covered">pattern</b></li>
-					<li><b class="covered">placeholder</b></li>
-					<li><b class="covered">required</b></li>
-					<li>step</li>
-				</ul>
-				<h4>HTML5 added the following attributes for the &ltform&gt element:</h4>
-				<ul>
-					<li>autocomplete</li>
-					<li>novalidate</li>
-				</ul>
-			</section>
-			<section>
-				<h3>Placeholder</h3>
-				<h4>Description</h4>
-				<p>
-					The "placeholder" attribute specifies a hint that describes the 
-					expected value of an input field. The hint is shown inside the input 
-					field and hidden when the user starts typing.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+		<main role="main">
+			<article>
+				<header>
+					<h2>New Input Attributes</h2>
+					<img src="HTML5.png" alt="HTML5 logo" width="50px">
+					<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
+				</header>
+				<section>
+					<h4>HTML5 added the following attributes for the &ltinput&gt element:</h4>
+					<ul>
+						<li>autocomplete</li>
+						<li><b class="covered">autofocus</b></li>
+						<li>form</li>
+						<li>formaction</li>
+						<li>formenctype</li>
+						<li>formmethod</li>
+						<li>formnovalidate</li>
+						<li>formtarget</li>
+						<li>height</li>
+						<li>width</li>
+						<li>list</li>
+						<li>min</li>
+						<li>max</li>
+						<li>multiple</li>
+						<li><b class="covered">pattern</b></li>
+						<li><b class="covered">placeholder</b></li>
+						<li><b class="covered">required</b></li>
+						<li>step</li>
+					</ul>
+					<h4>HTML5 added the following attributes for the &ltform&gt element:</h4>
+					<ul>
+						<li>autocomplete</li>
+						<li>novalidate</li>
+					</ul>
+				</section>
+				<section>
+					<h3>Placeholder</h3>
+					<h4>Description</h4>
 					<p>
-						&ltinput type="text" name="first-name" 
-						placeholder="First name"&gt<br>
-						&ltinput type="text" name="last-name" placeholder="Last name"&gt<br>
-						&ltinput type="text" name="email" placeholder="email"&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						<input type="text" name="first-name" placeholder="First name">
-						<input type="text" name="last-name" placeholder="Last name">
-						<input type="text" name="email" placeholder="email">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Autofocus</h3>
-				<h4>Description</h4>
-				<p>
-					The "autofocus" attribute specifies that the input field should 
-					automatically get focus(active cursor) when the page loads.
-				</p> 
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						The "placeholder" attribute specifies a hint that describes the 
+						expected value of an input field. The hint is shown inside the input 
+						field and hidden when the user starts typing.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltinput type="text" name="first-name" 
+							placeholder="First name"&gt<br>
+							&ltinput type="text" name="last-name" placeholder="Last name"&gt<br>
+							&ltinput type="text" name="email" placeholder="email"&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							<input type="text" name="first-name" placeholder="First name">
+							<input type="text" name="last-name" placeholder="Last name">
+							<input type="text" name="email" placeholder="email">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Autofocus</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-						&nbsp&nbspUsername:&ltinput type="text" name="username" 
-						autofocus&gt<br>
-						&nbsp&nbspPassword:&ltinput type="password" name=:"psw"&gt<br>
-						&lt/form&gt<br>
-					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-						Username:<input type="text" name="username" autofocus>
-						Password:<input type="password" name="userpsw">
-					</form>
-				</div>
-			</section>
-			<section>
-				<h3>Required</h3>
-				<h4>Description</h4>
-				<p>
-					The "required" attribute specifies that an input field must be filled 
-					out before submitting the form. It works with the following input 
-					types: "text", "search", "url", "tel", "email", "password", 
-					"date pickers", "number", "checkbox", "radio" and "file".
-				</p>
-				<h4>Example</h4>
-				<h5>HTML5</h5>
-				<div class="code">
+						The "autofocus" attribute specifies that the input field should 
+						automatically get focus(active cursor) when the page loads.
+					</p> 
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+							&nbsp&nbspUsername:&ltinput type="text" name="username" 
+							autofocus&gt<br>
+							&nbsp&nbspPassword:&ltinput type="password" name=:"psw"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+							Username:<input type="text" name="username" autofocus>
+							Password:<input type="password" name="userpsw">
+						</form>
+					</div>
+				</section>
+				<section>
+					<h3>Required</h3>
+					<h4>Description</h4>
 					<p>
-						&ltform&gt<br>
-			  		&nbsp&nbspUsername: &ltinput type="text" name="username" 
-			  		required&gt<br>
-			  		&nbsp&nbsp&ltinput type="submit"&gt<br>
-			  		&nbsp&nbspPassword: &ltinput type="password" name="userpsw" 
-			  		required&gt<br>
-			  		&nbsp&nbsp&ltinput type="submit"&gt<br>
-						&lt/form&gt<br>
+						The "required" attribute specifies that an input field must be filled 
+						out before submitting the form. It works with the following input 
+						types: "text", "search", "url", "tel", "email", "password", 
+						"date pickers", "number", "checkbox", "radio" and "file".
 					</p>
-				</div>
-				<h5>Result</h5>
-				<div class="result">
-					<form>
-			  		Username: <input type="text" name="username" required>
-			  		<input type="submit">
-			  		Password: <input type="password" name="userpsw" required>
-			  		<input type="submit">
-					</form>
-				</div>
-			</section>
-		</article>
+					<h4>Example</h4>
+					<h5>HTML5</h5>
+					<div class="code">
+						<p>
+							&ltform&gt<br>
+				  		&nbsp&nbspUsername: &ltinput type="text" name="username" 
+				  		required&gt<br>
+				  		&nbsp&nbsp&ltinput type="submit"&gt<br>
+				  		&nbsp&nbspPassword: &ltinput type="password" name="userpsw" 
+				  		required&gt<br>
+				  		&nbsp&nbsp&ltinput type="submit"&gt<br>
+							&lt/form&gt<br>
+						</p>
+					</div>
+					<h5>Result</h5>
+					<div class="result">
+						<form>
+				  		Username: <input type="text" name="username" required>
+				  		<input type="submit">
+				  		Password: <input type="password" name="userpsw" required>
+				  		<input type="submit">
+						</form>
+					</div>
+				</section>
+			</article>
+		</main>
 		<footer>
   		<address>
     		&copy 2017 <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
