--- a/updated-elements.html
+++ b/updated-elements.html
@@ -27,45 +27,47 @@
 	    	</ul>
 			</nav>
 		</header>
-		<article>
-			<header>
-				<h2>Updated Elements</h2>
-				<img src="HTML5.png" alt="HTML5 logo" width="50px">
-				<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
-			</header>
-			<section>
-				<h4>Example:</h4>
-				<div class="code">
-					<p>
-						&lt!DOCTYPE html&gt (1)<br>
-						&lthtml&gt<br>
-						&nbsp&nbsp&lthead&gt<br>
-						&nbsp&nbsp&nbsp&nbsp&ltmeta charset="UTF-8"&gt (2)<br>
-						&nbsp&nbsp&nbsp&nbsp&ltlink rel="stylesheet" href="foo.css"&gt 
-						(3)<br>
-						&nbsp&nbsp&nbsp&nbsp&ltscript src="foo.js"&gt&lt/script&gt (4.1)<br>
-						&nbsp&nbsp&nbsp&nbsp&ltscript&gt<i>JS code</i>&lt/script&gt 
-						(4.2)<br>
-						&nbsp&nbsp&nbsp&nbsp...<br>
-						&nbsp&nbsp&lt/head&gt<br>
-						&nbsp&nbsp...<br>
-						&lt/html&gt
-					</p>
-				</div>
-				<h4>Description:</h4>
-				<ul>
-					<li>
-						DOCTYPE (1): set the HTML version that the browser should use. If 
-						you not specify a version number, you're telling the browser to use 
-						the latest version.
-					</li>
-					<li>Meta declaration (2): specify character encoding.</li>
-					<li>Link tag (3): reference external CSS files.</li>
-					<li>Script tag (4.1): reference external JS files.</li>
-					<li>Script tag (4.2): run integrated JS code.</li>
-				</ul>
-			</section>
-		</article>
+		<main role="main">
+			<article>
+				<header>
+					<h2>Updated Elements</h2>
+					<img src="HTML5.png" alt="HTML5 logo" width="50px">
+					<p>Created Feb 28, 2017 by <a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a></p>
+				</header>
+				<section>
+					<h4>Example:</h4>
+					<div class="code">
+						<p>
+							&lt!DOCTYPE html&gt (1)<br>
+							&lthtml&gt<br>
+							&nbsp&nbsp&lthead&gt<br>
+							&nbsp&nbsp&nbsp&nbsp&ltmeta charset="UTF-8"&gt (2)<br>
+							&nbsp&nbsp&nbsp&nbsp&ltlink rel="stylesheet" href="foo.css"&gt 
+							(3)<br>
+							&nbsp&nbsp&nbsp&nbsp&ltscript src="foo.js"&gt&lt/script&gt (4.1)<br>
+							&nbsp&nbsp&nbsp&nbsp&ltscript&gt<i>JS code</i>&lt/script&gt 
+							(4.2)<br>
+							&nbsp&nbsp&nbsp&nbsp...<br>
+							&nbsp&nbsp&lt/head&gt<br>
+							&nbsp&nbsp...<br>
+							&lt/html&gt
+						</p>
+					</div>
+					<h4>Description:</h4>
+					<ul>
+						<li>
+							DOCTYPE (1): set the HTML version that the browser should use. If 
+							you not specify a version number, you're telling the browser to use 
+							the latest version.
+						</li>
+						<li>Meta declaration (2): specify character encoding.</li>
+						<li>Link tag (3): reference external CSS files.</li>
+						<li>Script tag (4.1): reference external JS files.</li>
+						<li>Script tag (4.2): run integrated JS code.</li>
+					</ul>
+				</section>
+			</article>
+		</main>
 		<footer>
   		<address>
     		&copy 2017 <a href="mailto:marios.sofokleous@yandex.com" >Marios Sofokleous</a>
