Set header in fixed position & highlight current navigation link

--- a/new-elements.html
+++ b/new-elements.html
@@ -20,7 +20,7 @@
 	      	<li><a href="home.html">Home</a></li>
 	        <li><a href="updated-tags.html">Updated Tags</a></li>
 	    		<li><a href="updated-elements.html">Updated Elements</a></li>
-	    		<li><a href="new-elements.html">New Elements</a></li>
+	    		<li><a id="current" href="new-elements.html">New Elements</a></li>
 	    		<li><a href="new-input-types.html">New Input Types</a></li>
 	    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
 	    		<li><a href="new-form-elements.html">New Form Elements</a></li>
