--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -23,7 +23,7 @@
 	    		<li><a href="new-elements.html">New Elements</a></li>
 	    		<li><a href="new-input-types.html">New Input Types</a></li>
 	    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
-	    		<li><a href="new-form-elements.html">New Form Elements</a></li>
+	    		<li><a id="current" href="new-form-elements.html">New Form Elements</a></li>
 	    	</ul>
 			</nav>
 		</header>
