--- a/updated-elements.html
+++ b/updated-elements.html
@@ -19,7 +19,7 @@
       	<ul>
 	      	<li><a href="home.html">Home</a></li>
 	        <li><a href="updated-tags.html">Updated Tags</a></li>
-	    		<li><a href="updated-elements.html">Updated Elements</a></li>
+	    		<li><a id="current" href="updated-elements.html">Updated Elements</a></li>
 	    		<li><a href="new-elements.html">New Elements</a></li>
 	    		<li><a href="new-input-types.html">New Input Types</a></li>
 	    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
