--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 			<h1>HTML5 New Features</h1>
 			<nav>
       	<ul>
-	      	<li><a href="home.html">Home</a></li>
+	      	<li><a id="current" href="home.html">Home</a></li>
 	        <li><a href="updated-tags.html">Updated Tags</a></li>
 	    		<li><a href="updated-elements.html">Updated Elements</a></li>
 	    		<li><a href="new-elements.html">New Elements</a></li>
