--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -22,7 +22,7 @@
 	    		<li><a href="updated-elements.html">Updated Elements</a></li>
 	    		<li><a href="new-elements.html">New Elements</a></li>
 	    		<li><a href="new-input-types.html">New Input Types</a></li>
-	    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
+	    		<li><a id="current" href="new-input-attributes.html">New Input Attributes</a></li>
 	    		<li><a href="new-form-elements.html">New Form Elements</a></li>
 	    	</ul>
 			</nav>
