--- a/updated-tags.html
+++ b/updated-tags.html
@@ -18,7 +18,7 @@
 			<nav>
       	<ul>
 	      	<li><a href="home.html">Home</a></li>
-	        <li><a href="updated-tags.html">Updated Tags</a></li>
+	        <li><a id="current" href="updated-tags.html">Updated Tags</a></li>
 	    		<li><a href="updated-elements.html">Updated Elements</a></li>
 	    		<li><a href="new-elements.html">New Elements</a></li>
 	    		<li><a href="new-input-types.html">New Input Types</a></li>
